# playlist

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  README.txt  example.txt
docs/: mainpage.dox
docs/html/: LinkedList_8hpp.html  LinkedList_8hpp_source.html  Node_8hpp.html  Node_8hpp_source.html  Playlist_8cpp.html  Playlist_8hpp.html  Playlist_8hpp_source.html  Song_8cpp.html  Song_8hpp.html  Song_8hpp_source.html  annotated.html  classLinkedList-members.html  classLinkedList.html  classNode-members.html  classNode.html  classPlaylist-members.html  classPlaylist.html  classSong-members.html  classSong.html  classes.html  dir_051bfca0d6f4e92417dab1531a199030.html  dir_49e56c817e5e54854c35e136979f97ca.html  dir_4fef79e7177ba769987a8da36c892c5f.html  dir_63772b626f2709090f0bdca0f40827b4.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_bde645946ce0d36c764143568c0cd542.html  dir_d44c64559bbebec7f509842c48db8b23.html  dir_f6141aeee34381ef9218d18cc59afdbf.html  dir_f832e65f699b83436d186dae4d69d023.html  files.html  functions.html  functions_func.html  functions_rela.html  functions_vars.html  globals.html  globals_func.html  index.html  main_8cpp.html  menu_8cpp.html  menu_8hpp.html  (+2 more)
docs/latex/: LinkedList_8hpp.tex  LinkedList_8hpp_source.tex  Node_8hpp.tex  Node_8hpp_source.tex  Playlist_8cpp.tex  Playlist_8hpp.tex  Playlist_8hpp_source.tex  Song_8cpp.tex  Song_8hpp.tex  Song_8hpp_source.tex  annotated.tex  (+11 more)
include/: LinkedList.hpp  Node.hpp  Playlist.hpp  Song.hpp  menu.hpp
src/: LinkedList.cpp  Node.cpp  Playlist.cpp  Song.cpp  main.cpp  menu.cpp  test.cpp
(+34 files in other folders)
